--- a/CH02/CH02.vcxproj.filters
+++ b/CH02/CH02.vcxproj.filters
@@ -78,6 +78,21 @@
     <ClCompile Include="method_overloading_데이터교환.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Default_Parameter1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="New_Delete.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="New_동적배열_변환.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="New_문자열 역순으로 출력.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="New_구조체 동적할당.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NameSP.h">
