--- a/CH04/CH04.vcxproj.filters
+++ b/CH04/CH04.vcxproj.filters
@@ -33,5 +33,11 @@
     <ClCompile Include="12-string_Class_Method.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="13_NameCard.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Apple_Sales.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
