--- a/Practice/Practice.vcxproj
+++ b/Practice/Practice.vcxproj
@@ -172,7 +172,10 @@
     <ClCompile Include="527p.08.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="527p_09.cpp" />
+    <ClCompile Include="527p_09.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="528p_10.cpp" />
     <ClCompile Include="Employee_FileIO.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
