--- a/Practice/Practice.vcxproj.filters
+++ b/Practice/Practice.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="527p_09.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="528p_10.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
