--- a/Mini_Project/Mini_Project.vcxproj.filters
+++ b/Mini_Project/Mini_Project.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="소스2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="소스1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
